--- a/Test/about.ejs
+++ b/Test/about.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PORTFOLIO</title>
+        <title>About us</title>
 </head>
 <body>
-<h1> ABOUT US</h1>
-<p>My Resume: <a href="MacalaladCJ-Resume.pdf">Click Here</a></p>
+<h1> About US </h1>
+<h3> This is only for test</h3>
 <p>
     Goodbye
 </p>
