--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -2,92 +2,59 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
-    <title>GAME RANKING</title>
+    <title>STEAM TEST</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/toprank.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> 
+      
 
     </head>
-    <body style="background-color:rgb(23, 27, 31);">
-    <header style="background-color:rgb(23, 27, 31);">
-       <img class="img_king" src="/media/photos/game.png" height="90">
-       <div class="container">
-            <div class="outer">
-       </div>
-
-       </div>
+    <body style="background-color: rgb(27, 41, 56);">
+    <header style="background-color:rgb(27, 41, 56);">
         <div class ="upbar">
         <ur>
-            <center><i><b><p><h1><font color="orange">
-                GAME RANKING
-            </font>
-        </center>
-        </i>
-        </b>
-        </p>
-    </h1>
-        <li><a href="/">Games</a></li>
-        <li><a href="/portfolio">Profile</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/help">Help</a></li>
+        <li><a href="home.html">Steam</a></li>
+        <li><a href="">View</a></li>
+        <li><a href="/about">Friends</a></li>
+        <li><a href="">Games</a></li>
+        <li><a href="">Help</a></li>
         </ur>
         </div>
-      
+        <br>
+
         <div class ="navbar">
     
             <ul>
                 <li>
-               <a href="/">HOME</a>
-               <a href="/topics">TOPICS</a>
-               <a href="/community">COMMUNITY</a>
-               <a href="/toprank">TOPRANK</a>
+                    <a href="#">STORE</a>
+                    <ul class="dropdown">
+                        <li><a href="#">Featured</a></li>
+                        <li><a href="#">Discovery Queue</a></li>
+                        <li><a href="#">Wishlist</a></li>
+                        <li><a href="#">Point Shop</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Stats</a></li>
+               </ul>
+               </li>
+               <a href="#">LIBRARY</a>
+               <a href="#">COMMUNITY</a>
+               <a href="#">PROFILE</a>
                </ul>
                 
     <form>
-       <br>
+       
         <div class="search">
         <span class="search-icon material-symbols-outlined">Search</span>
         <input class="search-input" type="Search:" placeholder="Search">
+        
         </div>
+        
         </form>
-   
-    <div>
-        <a href="https://www.dota2.com/home" target="_blank">
-        <img src="/media/photos/dota2.jpg" alt="">
-    </a>
-    <a href="https://www.ea.com/games/apex-legends" target="_blank">
-        <img src="/media/photos/apexlegends.jpg" alt="">
-        </a>
-        <a href="https://www.counter-strike.net/cs2" target="_blank">
-        <img src="/media/photos/cs2.jpg" alt="">
-        </a>
-        <a href="https://www.leagueoflegends.com/en-us/" target="_blank">
-        <img src="/media/photos/league.jpg" alt="">
-        </a>
-        <a href="https://playvalorant.com/en-us/" target="_blank">
-        <img src="/media/photos/valorant.jpg" alt="">
-        </a>
-        <a href="https://www.minecraft.net/en-us" target="_blank">
-        <img src="/media/photos/minecraft.jpg" alt="">
-        </a>
-        <a href="https://www.pocketpair.jp/palworld" target="_blank">
-        <img src="/media/photos/pal.jpg" alt="">
-        </a>
-        <a href="https://www.fortnite.com/?lang=en-US" target="_blank">
-            <img src="/media/photos/fortnite.jpg" alt="">
-            </a>
-        </div>
-
-        <br>
-    <footer>
-        <i><p><b> CHRIS JOSHUA C. MACALALAD</p></i></b>
-    </footer>
+    
+    
     
     </header>
 
