--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
-    <title>STEAM TEST</title>
+    <title>GAME RANKING</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,7 @@
     </head>
     <body style="background-color: rgb(27, 41, 56);">
     <header style="background-color:rgb(27, 41, 56);">
+        <img src="King/King.jpg" alt="">
         <div class ="upbar">
         <ur>
         <li><a href="home.html">Steam</a></li>
