--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -9,12 +9,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> 
-      
+    <style type="text/css">
+        .img_king
+        {
+            float: right;
+            
+        }
+    </style>
 
     </head>
-    <body style="background-color: rgb(27, 41, 56);">
-    <header style="background-color:rgb(27, 41, 56);">
-        <img src="King/King.jpg" alt="">
+    <body style="background-color: rgb(23, 27, 31);">>
+    <header style="background-color:rgb(23, 27, 31);">
+        <img class="img_king" src="King.jpg" height="100"> 
         <div class ="upbar">
         <ur>
         <li><a href="home.html">Steam</a></li>
