--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -23,10 +23,10 @@
         <img class="img_king" src="King.jpg" height="100"> 
         <div class ="upbar">
         <ur>
-        <li><a href="home.html">Steam</a></li>
-        <li><a href="">View</a></li>
-        <li><a href="/about">Friends</a></li>
-        <li><a href="">Games</a></li>
+        <li><a href="/">Games</a></li>
+        <li><a href="">Profile</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="">Contact</a></li>
         <li><a href="">Help</a></li>
         </ur>
         </div>
@@ -36,7 +36,7 @@
     
             <ul>
                 <li>
-                    <a href="#">STORE</a>
+                    <a href="/">HOME</a>
                     <ul class="dropdown">
                         <li><a href="#">Featured</a></li>
                         <li><a href="#">Discovery Queue</a></li>
@@ -46,9 +46,9 @@
                         <li><a href="#">Stats</a></li>
                </ul>
                </li>
-               <a href="#">LIBRARY</a>
-               <a href="#">COMMUNITY</a>
-               <a href="#">PROFILE</a>
+               <a href="/topics">TOPICS</a>
+               <a href="/community">COMMUNITY</a>
+               <a href="/toprank">TOP RANKS</a>
                </ul>
                 
     <form>
