--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -26,7 +26,7 @@
         <div class ="upbar">
         <ur>
         <li><a href="/">Games</a></li>
-        <li><a href="">Profile</a></li>
+        <li><a href="/portfolio">Profile</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="">Help</a></li>
