--- a/Test/portfolio.ejs
+++ b/Test/portfolio.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About us</title>
+        <title>PORTFOLIO</title>
 </head>
 <body>
-<h1> MY PROFILE </h1>
-<h3> This is only for test</h3>
+<h1> WELCOME TO MY PROFILE </h1>
+<p>My Resume: <a href="chris.pdf">Click Here</a></p>
 <p>
     Goodbye
 </p>
