--- a/Test/toprank.ejs
+++ b/Test/toprank.ejs
@@ -4,9 +4,18 @@
         <title>TOP RANKS</title>
 </head>
 <body>
-<h1> # TOP RANKS </h1>
+<b><h1> # TOP 10 GAMES ONLINE PC IN 2024 </h1></b>
 <h3> #1 GAME: COUNTER STRIKE 2</h3>
 <h3> #2 GAME: DOTA 2</h3>
+<h3> #3 GAME: APEX LEGENDS</h3>
+<h3> #4 GAME: VALORANT</h3>
+<h3> #5 GAME: FORNITE</h3>
+<h3> #6 GAME: LEAGUE OF LEGENDS</h3>
+<h3> #7 GAME: ROCKET LEAGUE</h3>
+<h3> #8 GAME: PALWORLD</h3>
+<h3> #9 GAME: MINECRAFT</h3>
+<h3> #10 GAME: ROBLOX</h3>
+
 <p>
     Goodbye
 </p>
