updated media and routes location

--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -23,7 +23,7 @@
     </head>
     <body style="background-color: rgb(23, 27, 31);">>
     <header style="background-color:rgb(23, 27, 31);">
-        <img class="img_king" src="King.jpg" height="100"> 
+        <img class="img_king" src="/media/photos/king.jpg" height="100"> 
         <div class ="upbar">
         <ur>
         <li><a href="/">Games</a></li>
