--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/toprank.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -29,8 +29,8 @@
         <li><a href="/">Games</a></li>
         <li><a href="/portfolio">Profile</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Help</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/help">Help</a></li>
         </ur>
         </div>
         <br>
