--- a/Test/toprank.ejs
+++ b/Test/toprank.ejs
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>TOP RANKS</title>
+        <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
 <b><h1> # TOP 10 GAMES ONLINE PC IN 2024 </h1></b>
