--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -44,7 +44,7 @@
                <a href="/">HOME</a>
                <a href="/topics">TOPICS</a>
                <a href="/community">COMMUNITY</a>
-               <a href="/toprank">TOP RANKS</a>
+               <a href="/toprank">TOPRANKS</a>
                </ul>
                 
     <form>
@@ -79,12 +79,24 @@
         }
     </style>
     <div>
+        <a href="https://www.dota2.com/home" target="_blank">
         <img src="/media/photos/dota2.jpg" alt="">
+    </a>
+    <a href="https://www.ea.com/games/apex-legends" target="_blank">
         <img src="/media/photos/apexlegends.jpg" alt="">
+        </a>
+        <a href="https://www.counter-strike.net/cs2" target="_blank">
         <img src="/media/photos/cs2.jpg" alt="">
+        </a>
+        <a href="https://www.leagueoflegends.com/en-us/" target="_blank">
         <img src="/media/photos/league.jpg" alt="">
+        </a>
+        <a href="https://playvalorant.com/en-us/" target="_blank">
         <img src="/media/photos/valorant.jpg" alt="">
+        </a>
+        <a href="https://www.minecraft.net/en-us" target="_blank">
         <img src="/media/photos/minecraft.jpg" alt="">
+        </a>
         </div>
     
     
