--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -16,7 +16,7 @@
         .img_king
         {
             float: right;
-            left: 77%;
+            left: 60%;
             width: 19%;
             position: absolute; 
             
@@ -25,9 +25,16 @@
     </head>
     <body style="background-color:rgb(23, 27, 31);">
     <header style="background-color:rgb(23, 27, 31);">
-       <img class="img_king" src="/media/photos/king.jpg" height="90">
+       <img class="img_king" src="/media/photos/game.png" height="90">
         <div class ="upbar">
         <ur>
+            <i><b><p><h1><font color="orange">
+                GAME RANKING
+            </font>
+        </i>
+        </b>
+        </p>
+    </h1>
         <li><a href="/">Games</a></li>
         <li><a href="/portfolio">Profile</a></li>
         <li><a href="/about">About</a></li>
