--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -65,24 +65,26 @@
         </form>
     <style>
         div{
-            display: flex;
+            display:flex;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
+            flex-wrap:wrap;
+            position:relative;
+
         }
         div img{
             width: 450px;
-            height: 200px;
+            height: 250px;
             border: 5px solid #ff3d0036;
             border-radius: 15px;
             box-shadow: 4px 7px 7px 0px #00000042 ;
-            cursor: pointer;
+            cursor:pointer;
             margin: 10px;
             transition: 400ms;
         }
         div img:hover{
            
-            transform: scale(1.03);
+            transform: scale(1.05);
         }
     </style>
     <div>
@@ -104,8 +106,13 @@
         <a href="https://www.minecraft.net/en-us" target="_blank">
         <img src="/media/photos/minecraft.jpg" alt="">
         </a>
+        <a href="https://www.pocketpair.jp/palworld" target="_blank">
+        <img src="/media/photos/pal.jpg" alt="">
+        </a>
         </div>
-    
+    <footer>
+        <i><p> LAGUNA_PHILIPPINES-©Copyright_2024 </p></i>
+    </footer>
     
     </header>
 
