--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -22,10 +22,50 @@
             
         }
     </style>
+    <style>
+        .container{
+            position: fixed;
+            left: 7.5%;
+            top: 20%;
+            width: 100%;
+            height: 100%;
+            animation: animate 20s ease-in-out infinite;
+            background-size: cover;
+            
+        }
+        .outer{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0,0,0,0,5);
+        }
+        @keyframes animate{
+            0%,100%{
+                background-image: url("/media/photos/cs2.jpg");
+            }
+            25%{
+                background-image: url("/media/photos/apexlegends.jpg");
+            }
+            50%{
+                background-image: url("/media/photos/dota2.jpg");
+            }
+            75%{
+                background-image: url("/media/photos/valorant.jpg");
+            }
+            
+        }
+    </style>
     </head>
     <body style="background-color:rgb(23, 27, 31);">
     <header style="background-color:rgb(23, 27, 31);">
        <img class="img_king" src="/media/photos/game.png" height="90">
+       <div class="container">
+            <div class="outer">
+       </div>
+
+       </div>
         <div class ="upbar">
         <ur>
             <i><b><p><h1><font color="orange">
