--- a/Test/toprank.ejs
+++ b/Test/toprank.ejs
@@ -6,24 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+     
 </head>
-<body>
-<b><h1> # TOP 10 GAMES ONLINE PC IN 2024 </h1></b>
+<body style="background-color:rgb(19, 22, 24);">
+    
+   
+    <div class="CS2">
+<b><i><h1><font color="white"> # TOP 10 GAMES ONLINE PC IN 2024 </h1></b></i>
 <h3> #1 GAME: COUNTER STRIKE 2</h3>
+<center><img class"cs2" src="/media/photos/cs2go.jpg"</center>
+<center><p><h6>Counter-Strike: Global Offensive (CS:GO) is a 2012 multiplayer tactical first-person shooter developed by Valve and Hidden Path Entertainment. It is the fourth game in the Counter-Strike series. Developed for over two years, Global Offensive was released for OS X, PlayStation 3, Windows, and Xbox 360 in August 2012, and for Linux in 2014.
+The game pits two teams, Terrorists and Counter-Terrorists, against each other in different objective-based game modes. The most common game modes involve the Terrorists planting a bomb while Counter-Terrorists attempt to stop them, or Counter-Terrorists attempting to rescue hostages that the Terrorists have captured. There are nine official game modes, all of which have distinct characteristics specific to that mode. The game also has matchmaking support that allows players to play on dedicated Valve servers, in addition to community-hosted servers with custom maps and game modes. A battle-royale game-mode, "Danger Zone", was introduced in late 2018.
+Global Offensive received positive reviews from critics on release, who praised the game for its gameplay and faithfulness to the Counter-Strike series, though it was criticized for some early features and the differences between the console and PC versions. Since its release, it has drawn in an estimated 11 million players per month and remains one of the most played games on Valve's Steam platform. In December 2018, Valve transitioned the game to a free-to-play model, focusing on revenue from cosmetic items.</center></p></h6>
+</div>
 <h3> #2 GAME: DOTA 2</h3>
+<center><img class"cs2" src="/media/photos/dota2.jpg" width="800"
+<center><p><h6>Dota 2 is a 2013 multiplayer online battle arena (MOBA) video game by Valve. The game is a sequel to Defense of the Ancients (DotA), a community-created mod for Blizzard Entertainment's Warcraft III: Reign of Chaos. Dota 2 is played in matches between two teams of five players, with each team occupying and defending their own separate base on the map. Each of the ten players independently controls a powerful character known as a "hero" that all have unique abilities and differing styles of play. </center></p></h6>
 <h3> #3 GAME: APEX LEGENDS</h3>
+<center><p><h6></h6>
 <h3> #4 GAME: VALORANT</h3>
+<center><p><h6></h6></p></center>
 <h3> #5 GAME: FORNITE</h3>
+<center><p><h6></h6>
 <h3> #6 GAME: LEAGUE OF LEGENDS</h3>
+<center><p><h6></h6>
 <h3> #7 GAME: ROCKET LEAGUE</h3>
+<center><p><h6></h6>
 <h3> #8 GAME: PALWORLD</h3>
+<center><p><h6></h6>
 <h3> #9 GAME: MINECRAFT</h3>
+<center><p><h6></h6>
 <h3> #10 GAME: ROBLOX</h3>
+<center><p><h6></h6>
+</font>
 
-<p>
-    Goodbye
-</p>
 <a href="/">Go back</a>
 
 </body>
