--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -149,6 +149,9 @@
         <a href="https://www.pocketpair.jp/palworld" target="_blank">
         <img src="/media/photos/pal.jpg" alt="">
         </a>
+        <a href="https://www.fortnite.com/?lang=en-US" target="_blank">
+            <img src="/media/photos/fortnite.jpg" alt="">
+            </a>
         </div>
     <footer>
         <i><p> LAGUNA_PHILIPPINES-©Copyright_2024 </p></i>
