--- a/Test/toprank.ejs
+++ b/Test/toprank.ejs
@@ -20,23 +20,32 @@ The game pits two teams, Terrorists and Counter-Terrorists, against each other i
 Global Offensive received positive reviews from critics on release, who praised the game for its gameplay and faithfulness to the Counter-Strike series, though it was criticized for some early features and the differences between the console and PC versions. Since its release, it has drawn in an estimated 11 million players per month and remains one of the most played games on Valve's Steam platform. In December 2018, Valve transitioned the game to a free-to-play model, focusing on revenue from cosmetic items.</center></p></h6>
 </div>
 <h3> #2 GAME: DOTA 2</h3>
-<center><img class"cs2" src="/media/photos/dota2.jpg" width="800"
+<center><img src="/media/photos/dota2.jpg" width="800"
 <center><p><h6>Dota 2 is a 2013 multiplayer online battle arena (MOBA) video game by Valve. The game is a sequel to Defense of the Ancients (DotA), a community-created mod for Blizzard Entertainment's Warcraft III: Reign of Chaos. Dota 2 is played in matches between two teams of five players, with each team occupying and defending their own separate base on the map. Each of the ten players independently controls a powerful character known as a "hero" that all have unique abilities and differing styles of play. </center></p></h6>
 <h3> #3 GAME: APEX LEGENDS</h3>
-<center><p><h6></h6>
+<center><img src="/media/photos/apexlegends.jpg"
+<center><p><h6>Apex Legends is a free-to-play battle royale-hero shooter game developed by Respawn Entertainment and published by Electronic Arts. It was released for PlayStation 4, Windows, and Xbox One in February 2019, for Nintendo Switch in March 2021, and for PlayStation 5 and Xbox Series X/S in March 2022. A mobile version of the game designed for touchscreens titled Apex Legends Mobile was released in May 2022 on Android and iOS. The game supports cross-platform play, excluding the aforementioned mobile platforms.
+Before the match, players form into two- or three-player squads, and select from pre-designed characters with distinctive abilities, known as "Legends". The game has two gameplay modes. In "Battle Royale", up to 20 three-person squads or 30 two-person duos land on an island and search for weapons and supplies before attempting to defeat all other players in combat. </h6></p></center>
 <h3> #4 GAME: VALORANT</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6></p></center>
 <h3> #5 GAME: FORNITE</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 <h3> #6 GAME: LEAGUE OF LEGENDS</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 <h3> #7 GAME: ROCKET LEAGUE</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 <h3> #8 GAME: PALWORLD</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 <h3> #9 GAME: MINECRAFT</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 <h3> #10 GAME: ROBLOX</h3>
+<center><img src="/media/photos/valorant.jpg"
 <center><p><h6></h6>
 </font>
 
