--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -154,7 +154,7 @@
             </a>
         </div>
     <footer>
-        <i><p> LAGUNA_PHILIPPINES-©Copyright_2024 </p></i>
+        <i><p> LAGUNA_PHILIPPINES-©Copyright_2024 (burahin mo to)</p></i>
     </footer>
     
     </header>
