--- a/Public/style.css
+++ b/Public/style.css
@@ -129,3 +129,44 @@ footer p {
   position: relative;
     color: antiquewhite;
 }
+.img_king
+{
+    float: right;
+    left: 60%;
+    width: 19%;
+    position: absolute; 
+    
+}
+.container{
+    position: fixed;
+    left: 7.5%;
+    top: 20%;
+    width: 100%;
+    height: 100%;
+    animation: animate 20s ease-in-out infinite;
+    background-size: cover;
+    
+}
+.outer{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0,0,5);
+}
+@keyframes animate{
+    0%,100%{
+        background-image: url("/media/photos/cs2.jpg");
+    }
+    25%{
+        background-image: url("/media/photos/apexlegends.jpg");
+    }
+    50%{
+        background-image: url("/media/photos/dota2.jpg");
+    }
+    75%{
+        background-image: url("/media/photos/valorant.jpg");
+    }
+    
+}
