--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -86,7 +86,7 @@
             </a>
         </div>
     <footer>
-        <i><p> LAGUNA_PHILIPPINES-©Copyright_2024 (burahin mo to)</p></i>
+        <i><p> CHRIS JOSHUA C. MACALALAD</p></i>
     </footer>
     
     </header>
