--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -85,8 +85,9 @@
             <img src="/media/photos/fortnite.jpg" alt="">
             </a>
         </div>
+        <br>
     <footer>
-        <i><p> CHRIS JOSHUA C. MACALALAD</p></i>
+        <i><p><b> CHRIS JOSHUAC. MACALALAD</p></i></b>
     </footer>
     
     </header>
