--- a/Test/home.ejs
+++ b/Test/home.ejs
@@ -23,9 +23,10 @@
        </div>
         <div class ="upbar">
         <ur>
-            <i><b><p><h1><font color="orange">
+            <center><i><b><p><h1><font color="orange">
                 GAME RANKING
             </font>
+        </center>
         </i>
         </b>
         </p>
@@ -45,7 +46,7 @@
                <a href="/">HOME</a>
                <a href="/topics">TOPICS</a>
                <a href="/community">COMMUNITY</a>
-               <a href="/toprank">TOP RANKS</a>
+               <a href="/toprank">TOPRANK</a>
                </ul>
                 
     <form>
