--- a/Test/headerfooter.ejs
+++ b/Test/headerfooter.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -14,7 +15,7 @@
     </head>
     <body style="background-color:rgb(23, 27, 31);">
     <header style="background-color:rgb(23, 27, 31);">
-      
+        <% include('headerfooter')%>
        <img class="img_king" src="/media/photos/game.png" height="90">
        <div class="container">
             <div class="outer">
@@ -30,7 +31,6 @@
         </i>
         </b>
         </p>
-        
     </h1>
         <li><a href="/">Games</a></li>
         <li><a href="/portfolio">Profile</a></li>
@@ -39,7 +39,7 @@
         <li><a href="/help">Help</a></li>
         </ur>
         </div>
-        <
+      
         <div class ="navbar">
     
             <ul>
@@ -50,18 +50,20 @@
                <a href="/toprank">TOPRANK</a>
                </ul>
                 
-               <hr>
-   
-   
-
-        <br>
-    <footero>
-        <b><p><i> CHRIS JOSHUA C. MACALALAD</i></p></b>
-    </footero>
+    <form>
+       <br>
+        <div class="search">
+        <span class="search-icon material-symbols-outlined">Search</span>
+        <input class="search-input" type="Search:" placeholder="Search">
+        </div>
+        </form>
+        <footer>
+            <i> CHRIS JOSHUA C. MACALALAD</i>
+        </footer>
+        
+        </header>
     
-    </header>
-
-
-   
-</body>
-</html>
+    
+       
+    </body>
+    </html>
