--- a/Public/style.css
+++ b/Public/style.css
@@ -128,6 +128,14 @@ footer p {
   position: relative;
     color: antiquewhite;
 }
+footero i {
+    font-size: 10px;
+    right: 3%;
+    top: 80vh;
+   
+  position: absolute;
+    color: antiquewhite;
+}
 .img_king
 {
     float: right;
@@ -287,7 +295,7 @@ div img:hover{
     
     footer p {
         font-size: 10px;
-        right: 15%;
+        right: 14%;
         height: 50%;
       position: relative;
         color: antiquewhite;
@@ -331,8 +339,6 @@ div img:hover{
     }
     
 }
-
-
 
 
 
